--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aicacia/iter",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "aicacia iter",
   "repository": {
     "type": "git",
@@ -38,12 +38,14 @@
   "license": "(MIT OR Apache-2.0)",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "22",
-    "@rollup/plugin-node-resolve": "13",
-    "@rollup/plugin-typescript": "8",
+    "@rollup/plugin-commonjs": "24",
+    "@rollup/plugin-node-resolve": "15",
+    "@rollup/plugin-typescript": "11",
+    "@types/benchmark": "2",
     "@types/tape": "4",
     "@typescript-eslint/eslint-plugin": "5",
     "@typescript-eslint/parser": "5",
+    "benchmark": "2",
     "eslint": "8",
     "eslint-config-prettier": "8",
     "eslint-plugin-prettier": "4",
@@ -58,7 +60,7 @@
     "ts-node": "10",
     "tslib": "2",
     "typedoc": "0",
-    "typescript": "4"
+    "typescript": "5"
   },
   "dependencies": {
     "@aicacia/option": "0"
