--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,21 +9,12 @@
     "declarationDir": "types",
     "strict": true,
     "downlevelIteration": true,
-    "lib": [
-      "ESNext"
-    ]
+    "lib": ["ESNext"]
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "src/**/*.test.*",
-    "src/**/*.benchmark.*"
-  ],
+  "include": ["src"],
+  "exclude": ["src/**/*.test.*", "src/**/*.benchmark.*"],
   "typedocOptions": {
-    "entryPoints": [
-      "src/index.ts"
-    ],
+    "entryPoints": ["src/index.ts"],
     "out": "docs",
     "excludeExternals": true,
     "excludePrivate": true,
