--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
+      - run: npm install -g npm@9.3
       - run: npm ci
       - run: npm run coverage
 
@@ -30,6 +32,7 @@ jobs:
         with:
           node-version: 14.x
 
+      - run: npm install -g npm@9.3
       - run: npm ci
       - run: npm run doc
 
